fix(dotfiles): correct language skill guidance